account and user swagger rspec completed
